# tristan-detector

./: .gitignore  .gitremotes  CMakeLists.txt  Pipfile  README.md  build  control_requirements.txt  index.html  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs.yml
cmake/: FindOdinData.cmake
common/: CMakeLists.txt
common/include/: CMakeLists.txt  LATRDDefinitions.h
configure/: RELEASE
control/: control_requirements.txt  requirements.txt  setup.cfg  setup.py
control/latrd/: _version.py
control/latrd/detector/: control_simulator.py  event_simulator.py  latrd_channel.py  latrd_message.py  latrd_reactor.py  tristan_control_adapter.py
control/latrd/meta/: latrd_meta_listener.py  meta_writer.py  tristan_meta_writer.py
control/latrd/odin/static/: index.html
control/latrd/odin/static/js/: odin-data.js
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  installation.html  installation.rst  introduction.html  introduction.rst  make.bat  objects.inv  search.html  searchindex.js  setup.html  userguide.html  userguide.rst
docs/.doctrees/: environment.pickle  index.doctree  installation.doctree  introduction.doctree  setup.doctree  userguide.doctree
docs/_sources/: index.rst.txt  installation.rst.txt  setup.rst.txt
frameProcessor/include/: LATRDBuffer.h  LATRDDefinitions.h  LATRDExceptions.h  LATRDFileWriterPlugin.h  LATRDImageJob.h  LATRDProcessCoordinator.h  LATRDProcessIntegral.h  LATRDProcessJob.h  LATRDProcessPlugin.h  LATRDTimeSliceBuffer.h  LATRDTimeSliceWrap.h  LATRDTimestampManager.h
frameProcessor/src/: CMakeLists.txt  LATRDBuffer.cpp  LATRDFileWriterPlugin.cpp  LATRDFileWriterPluginLib.cpp  LATRDImageJob.cpp  LATRDProcessCoordinator.cpp  LATRDProcessIntegral.cpp  LATRDProcessJob.cpp  LATRDProcessPlugin.cpp  LATRDProcessPluginLib.cpp  LATRDTimeSliceBuffer.cpp  LATRDTimeSliceWrap.cpp  LATRDTimestampManager.cpp
frameProcessor/test/: CMakeLists.txt  LATRDProcessorTest.cpp
frameReceiver/include/: LATRDDefinitions.h  LATRDFrameDecoder.h
frameReceiver/src/: CMakeLists.txt  LATRDFrameDecoder.cpp  LATRDFrameDecoderLib.cpp
frameReceiver/test/: CMakeLists.txt  LATRDFrameDecoderUnitTest.cpp
latrd/: control_simulator.py  latrd_channel.py  latrd_message.py  latrd_reactor.py
latrd/detector/: latrd_channel.py  test_control_interface.py  tristan_control_adapter.py
latrd/meta/: adapter.py  meta_listener.py
latrd/odin/: execute_latrd  latrd.cfg
latrd/odin/static/: index.html
latrd/odin/static/js/: odin-data.js
performance/: CMakeLists.txt
performance/src/: AsciiStackReader.cpp  AsciiStackReader.h  BufferBuilder.cpp  BufferBuilder.h  CMakeLists.txt  DataBlock.cpp  DataBlock.h  DataWord.cpp  DataWord.h  FileWriter.cpp  FileWriter.h  TBBPacket.h  TBBProcessedPacket.h  WorkQueue.h  hdf5_file_operations.cpp  hdf5_file_operations.h  pipeline_performance.cpp  simple_file_open_close_test.cpp  simple_writing_performance_test.cpp  standard_performance.cpp
sandbox/: ascii_stack_reader.py  data_word.py  generate_execution_scripts.py  meta_to_vds.py  nexus_swmr_file.py  packet_simulator.py  raw_h5_stack_reader.py  simple_packet_receiver.py  test_timepix_reconstruction.py  test_tristan_reconstruction.py  timepix_data_parser.py  timepix_live_monitor.py  timepix_packet.py  timepix_packet_sender.py  timepix_swmr_writer.py  timepix_vds_writer.py  vds_tester.py
tools/python/: latrd_http_client.py  latrd_http_client_2.py  latrd_image_pcap_replay.py  latrd_pcap_dump_packet.py  latrd_pcap_replay.py  live_view_router.py  monitor_fr.py  setup_meta.py  test_latrd_fw_raw_client.py  tristan_packet_generator.py  tristan_parse_raw_h5.py
